force-app/main/default/objects/ContratoFilial__c/ContratoFilial__c.object-meta.xml
<CustomObject>
    <description>Objeto que permite registrar las filiales en el contrato</description>
    <label>Contrato Filial</label>
    <nameField>
        <label>Código Subcuenta</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contratos Filial</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>