force-app/main/default/objects/ContratoFilial__c/fields/AccountApproachLevel__c.field-meta.xml
<CustomField>
    <fullName>AccountApproachLevel__c</fullName>
    <description>Logo del nivel de acercamiento de la cuenta.</description>
    <formula>Entidad_Cuenta__r.Cuenta__r.Approach_level__c</formula>
    <label>Nivel de acercamiento de la cuenta</label>
    <type>Text</type>
</CustomField>