force-app/main/default/objects/ContratoFilial__c/fields/AccountBusinessUnit__c.field-meta.xml
<CustomField>
    <fullName>AccountBusinessUnit__c</fullName>
    <description>Logo de la business unit de la cuenta.</description>
    <formula>Entidad_Cuenta__r.Cuenta__r.Busines__c</formula>
    <label>Business Unit de la cuenta</label>
    <type>Text</type>
</CustomField>