force-app/main/default/objects/ContratoFilial__c/fields/AccountChannelLogo__c.field-meta.xml
<CustomField>
    <fullName>AccountChannelLogo__c</fullName>
    <description>Logo del canal de la cuenta.</description>
    <formula>Entidad_Cuenta__r.Cuenta__r.Ejecutivo_Logo__c</formula>
    <label>Canal de la cuenta</label>
    <type>Text</type>
</CustomField>