force-app/main/default/objects/ContratoFilial__c/fields/AccountF__c.field-meta.xml
<CustomField>
    <fullName>AccountF__c</fullName>
    <formula>HYPERLINK(&#39;https://edenredmexico.lightning.force.com/lightning/r/Account/&#39;+Entidad_Cuenta__r.Cuenta__r.Id+&#39;/view&#39;, Entidad_Cuenta__r.Cuenta__r.Name )</formula>
    <label>Cuenta</label>
    <type>Text</type>
</CustomField>