force-app/main/default/objects/ContratoFilial__c/fields/AccountSolutions__c.field-meta.xml
<CustomField>
    <fullName>AccountSolutions__c</fullName>
    <description>Logo de las soluciones contratadas de la cuenta (sólo se toman en cuenta subcuentas activas).</description>
    <formula>Entidad_Cuenta__r.Cuenta__r.Solutions__c</formula>
    <label>Soluciones contratadas de la cuenta</label>
    <type>Text</type>
</CustomField>