force-app/main/default/objects/ContratoFilial__c/fields/Amount_last_order__c.field-meta.xml
<CustomField>
    <fullName>Amount_last_order__c</fullName>
    <label>Monto del ultimo pedido</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>