force-app/main/default/objects/ContratoFilial__c/fields/Average_turnover_volume__c.field-meta.xml
<CustomField>
    <fullName>Average_turnover_volume__c</fullName>
    <description>Average billing volume to identify customer segmentation</description>
    <label>Promedio del volumen de emisión</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>