force-app/main/default/objects/ContratoFilial__c/fields/CodigoAS400__c.field-meta.xml
<CustomField>
    <fullName>CodigoAS400__c</fullName>
    <externalId>true</externalId>
    <label>Codigo AS400</label>
    <length>16</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>