force-app/main/default/objects/ContratoFilial__c/fields/Contrato_2__c.field-meta.xml
<CustomField>
    <fullName>Contrato_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contrato</label>
    <referenceTo>Contrato2__c</referenceTo>
    <relationshipLabel>Contratos Filial</relationshipLabel>
    <relationshipName>Contratos_Filial</relationshipName>
    <type>Lookup</type>
</CustomField>