force-app/main/default/objects/ContratoFilial__c/fields/CustomerCreatedAS400__c.field-meta.xml
<CustomField>
    <fullName>CustomerCreatedAS400__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cliente Creado en AS400</label>
    <type>Checkbox</type>
</CustomField>