force-app/main/default/objects/ContratoFilial__c/fields/Entidad_Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Entidad_Cuenta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Entidad Legal</label>
    <referenceTo>EntidadCuenta__c</referenceTo>
    <relationshipLabel>Contratos Filial</relationshipLabel>
    <relationshipName>Contratos_Filial</relationshipName>
    <type>Lookup</type>
</CustomField>