force-app/main/default/objects/ContratoFilial__c/fields/Familia__c.field-meta.xml
<CustomField>
    <fullName>Familia__c</fullName>
    <formula>IF(TEXT(Producto__r.Family)=&#39;Combustible&#39;, &#39;Ticket Car&#39;,
IF(TEXT(Producto__r.Family)=&#39;Empresarial&#39;, &#39;Ticket Empresarial&#39;,
IF(OR(TEXT(Producto__r.Family)=&#39;Ticket Restaurante&#39;,TEXT(Producto__r.Family)=&#39;Despensa&#39;,TEXT(Producto__r.Family)=&#39;Vestimenta&#39;,TEXT(Producto__r.Family)=&#39;Regalo&#39;,TEXT(Producto__r.Family)=&#39;Ayuda social&#39;), &#39;Benefits&#39;,
&#39;&#39;) 
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Solución</label>
    <type>Text</type>
</CustomField>