force-app/main/default/objects/ContratoFilial__c/fields/Frecuency__c.field-meta.xml
<CustomField>
    <fullName>Frecuency__c</fullName>
    <description>Field tha qualify the frecuency of sub accounts bills paid.</description>
    <label>Frecuencia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Recurrente</fullName>
            </value>
            <value>
                <fullName>Irregular</fullName>
            </value>
            <value>
                <fullName>Venta Nueva</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>