force-app/main/default/objects/ContratoFilial__c/fields/GroupAS400F__c.field-meta.xml
<CustomField>
    <fullName>GroupAS400F__c</fullName>
    <formula>Entidad_Cuenta__r.Cuenta__r.CodigoClienteAS400__c</formula>
    <label>ID Grupo As400</label>
    <type>Text</type>
</CustomField>