force-app/main/default/objects/ContratoFilial__c/fields/isActive__c.field-meta.xml
<CustomField>
    <fullName>isActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Field to locate accounts with no movement in their billing for the last 12 months.</description>
    <label>Activo</label>
    <type>Checkbox</type>
</CustomField>