force-app/main/default/objects/ContratoFilial__c/fields/isPrime__c.field-meta.xml
<CustomField>
    <fullName>isPrime__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Es principal</label>
    <type>Checkbox</type>
</CustomField>