force-app/main/default/objects/ContratoFilial__c/fields/Last_order_date__c.field-meta.xml
<CustomField>
    <fullName>Last_order_date__c</fullName>
    <label>Fecha de último pedido</label>
    <type>Date</type>
</CustomField>