force-app/main/default/objects/ContratoFilial__c/fields/ModifyOwner__c.field-meta.xml
<CustomField>
    <fullName>ModifyOwner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag must be active in order to change the record owner.</description>
    <label>Modificar propietario</label>
    <type>Checkbox</type>
</CustomField>