force-app/main/default/objects/ContratoFilial__c/fields/NombreEL__c.field-meta.xml
<CustomField>
    <fullName>NombreEL__c</fullName>
    <formula>Entidad_Cuenta__r.EntidadLegal__r.RazonSocial__c</formula>
    <label>NombreEL</label>
    <type>Text</type>
</CustomField>