force-app/main/default/objects/ContratoFilial__c/fields/Orden_de_trabajo__c.field-meta.xml
<CustomField>
    <fullName>Orden_de_trabajo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Orden de trabajo</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Contratos Filial</relationshipLabel>
    <relationshipName>Contratos_Filial</relationshipName>
    <type>Lookup</type>
</CustomField>