force-app/main/default/objects/ContratoFilial__c/fields/PlatformAdministrator__c.field-meta.xml
<CustomField>
    <fullName>PlatformAdministrator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Administrador de Plataforma</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contratos Filial</relationshipLabel>
    <relationshipName>Contratos_Filial</relationshipName>
    <type>Lookup</type>
</CustomField>