force-app/main/default/objects/ContratoFilial__c/fields/Producto__c.field-meta.xml
<CustomField>
    <fullName>Producto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Contratos Filial</relationshipLabel>
    <relationshipName>Contratos_Filial</relationshipName>
    <type>Lookup</type>
</CustomField>