force-app/main/default/objects/ContratoFilial__c/fields/Razon_Social__c.field-meta.xml
<CustomField>
    <fullName>Razon_Social__c</fullName>
    <formula>Entidad_Cuenta__r.NombreEL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Razón Social</label>
    <type>Text</type>
</CustomField>