force-app/main/default/objects/ContratoFilial__c/fields/RFC__c.field-meta.xml
<CustomField>
    <fullName>RFC__c</fullName>
    <formula>Entidad_Cuenta__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RFC</label>
    <type>Text</type>
</CustomField>