force-app/main/default/objects/ContratoFilial__c/fields/SegmentoF__c.field-meta.xml
<CustomField>
    <fullName>SegmentoF__c</fullName>
    <formula>Entidad_Cuenta__r.Cuenta__r.Segmento_Logo__c</formula>
    <label>Segmento</label>
    <type>Text</type>
</CustomField>