force-app/main/default/objects/ContratoFilial__c/fields/Solution__c.field-meta.xml
<CustomField>
    <fullName>Solution__c</fullName>
    <formula>TEXT(Producto__r.Family)</formula>
    <label>Solución</label>
    <type>Text</type>
</CustomField>