force-app/main/default/objects/ContratoFilial__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF(AND(isActive__c, ISPICKVAL(Frecuency__c, &quot;&quot;)) ,&quot;Nuevo&quot;,IF(AND(isActive__c,NOT( ISPICKVAL(Frecuency__c, &quot;&quot;))), &quot;Activo&quot;, &quot;Inactivo&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estatus</label>
    <type>Text</type>
</CustomField>