force-app/main/default/objects/ContratoFilial__c/fields/StatusSolution__c.field-meta.xml
<CustomField>
    <fullName>StatusSolution__c</fullName>
    <label>Estatus Solución</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Activo</fullName>
            </value>
            <value>
                <fullName>Inactivo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>