force-app/main/default/objects/ContratoFilial__c/fields/ZonaOwner__c.field-meta.xml
<CustomField>
    <fullName>ZonaOwner__c</fullName>
    <formula>Owner:User.Zona__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ZonaOwner</label>
    <type>Text</type>
</CustomField>