force-app/main/default/objects/ContratoFilial__c/validationRules/Codigo_AS400_correcto.validationRule-meta.xml
<ValidationRule>
    <fullName>Codigo_AS400_correcto</fullName>
    <active>false</active>
    <errorConditionFormula>NOT( 
IF(Contrato_2__r.PartidaPresupuesto__r.Product2.Es_OPAM__c  , 
OR(REGEX( CodigoAS400__c , &quot;^[0-9]{5}[-]{1}[A-Z]{2,3}$&quot;),
REGEX( CodigoAS400__c , &quot;^[0-9]{2}[-]{1}[0-9]{2}[-]{1}[0-9]{5}[-]{1}[0-9]{3}$&quot;)),
REGEX( CodigoAS400__c , &quot;^[0-9]{2}[-]{1}[0-9]{2}[-]{1}[0-9]{5}[-]{1}[0-9]{3}$&quot;)
)
)&amp;&amp;
NOT( ISBLANK( CodigoAS400__c))&amp;&amp;
NOT(ISNULL(Contrato_2__c))</errorConditionFormula>
    <errorDisplayField>CodigoAS400__c</errorDisplayField>
    <errorMessage>El formato del código debe de ser  00-00-00000-000 (Sucursal-Producto-Grupo-Cliente)</errorMessage>
</ValidationRule>