force-app/main/default/objects/ContratoFilial__c/validationRules/Formato_Despensa.validationRule-meta.xml
<ValidationRule>
    <fullName>Formato_Despensa</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(
  IF(NOT(TEXT(Contrato_2__r.PartidaPresupuesto__r.Product2.Family) = &#39;Despensa&#39;),
     OR(REGEX(CodigoAS400__c, &quot;^[0-9]{5}[-]{1}[A-Z]{2,3}$&quot;),
        REGEX(CodigoAS400__c, &quot;^[0-9]{2}[-]{1}[0-9]{2}[-]{1}[0-9]{5}[-]{1}[0-9]{3}$&quot;)),
     REGEX(CodigoAS400__c, &quot;^[0-9]{2}[-]{1}[0-9]{2}[-]{1}[0-9]{5}[-]{1}[0-9]{3}$&quot;)
  )
)  &amp;&amp;
NOT(ISNULL(Contrato_2__c)) &amp;&amp;
NOT(ISBLANK(CodigoAS400__c))</errorConditionFormula>
    <errorMessage>No es posible ejecutar el Alta de Cliente, asegúrate que el ID contenga el formato 00-00-00000-00.</errorMessage>
</ValidationRule>