force-app/main/default/objects/ContratoFilial__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>NombreEL__c</columns>
    <columns>Contrato_2__c</columns>
    <columns>CodigoAS400__c</columns>
    <columns>Entidad_Cuenta__c</columns>
    <columns>isPrime__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>